# rpi-elinux

./: .gitignore  .gitmodules  Dockerfile  README.md  kas-main.yml  setup.sh  setup_docker.sh
br/br2-external/: external.mk
br/br2-external/board/rpi0w/: cmdline.txt  linux.config
br/br2-external/package/bmp280-cli/: Config.in  rpi0w-led-user.mk
br/br2-external/package/bmp280-i2c/: README.md
br/br2-external/package/rpi0w-led-kern/: rpi0w-led-kern.mk
br/br2-external/package/rpi0w-led-user/: README.md
br2-external/: Config.in  external.desc  update_target_ssh.sh
br2-external/board/rpi0w/: busybox.config  genimage.cfg  post-image.sh
br2-external/package/bmp280-cli/src/: main.c  meson.build
br2-external/package/rpi0w-led-kern/: Config.in  README.md
br2-external/package/rpi0w-led-user/: Config.in
buildroot/: setup_packages.sh
buildroot/br2-external/: Config.in  README.md  external.desc  prep_env.sh
buildroot/br2-external/configs/: rpi0w_defconfig
buildroot/notes/: add_custom_package.md  other.md  rpi0w_buildroot_setup.md
configs/: bashrc  ssh_config
kas/: base.yml  rpi0w.yml  rpi3b.yml
kernel/blink-led/: Makefile
kernel/bmp280-i2c/: README.md  bmp280.c
lfs/: .gitignore
linux_manual_setup/: README.md  cli.sh
notes/: networking.md  rpi0w_buildroot_setup.md
notes/buildroot/: networking.md
scripts/: startup.sh
shared/rpi-led-user/: Makefile  main.c
userspace/rpi0w-led/: Config.in  rpi0w-led.mk
userspace/rpi0w-led/src/: Makefile
yocto/: kas-main.yml  setup-environment.sh
yocto/sources/meta-raspberrypi-custom/: README
(+42 files in other folders)
